--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -1,109 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Joseph Maddox</title>
+    <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,900;9..40,1000&family=Inter:wght@200;300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Joseph Maddox</title>
-  <link rel="stylesheet" href="style.css" />
-  <script defer src="script.js"></script>
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100;9..40,200;9..40,300;9..40,400;9..40,500;9..40,600;9..40,900;9..40,1000&family=Inter:wght@200;300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
 
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+  </head>
 
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-</head>
+  <body>
+    <div id="page-container">
+      <nav>
+        <div class="nav-wrapper">
+          <div class="navigation-bar box flex-start">
+            <a
+              class="navigation-name accent"
+              rel="noopener"
+              href="#project-link"
+              >JosephMaddox.dev</a
+            >
+          </div>
+          <div class="navigation-bar box flex-end">
+            <a class="navigation-items" rel="noopener" href="#project-link"
+              >Projects</a
+            >
+            <a class="navigation-items" rel="noopener" href="#about-link"
+              >About</a
+            >
+            <a class="navigation-items" href="">Contact</a>
+          </div>
+        </div>
+      </nav>
 
-<body>
-  <div id="page-container">
-    <nav>
-      <div class="nav-wrapper">
-      <div class="navigation-bar box flex-start"> <a class="navigation-name accent" rel="noopener"
-          href="#project-link">JosephMaddox.dev</a></div>
-      <div class="navigation-bar box flex-end">
-        <a class="navigation-items" rel="noopener" href="#project-link">Projects</a>
-        <a class="navigation-items" rel="noopener" href="#about-link">About</a>
-        <a class="navigation-items" href="">Contact</a>
-      </div></div>
-    </nav>
+      <div class="section-1 box">
+        <div class="section-wrapper">
+          <p class="title">Hi, I'm Joseph<span class="accent"> Maddox</span></p>
+          <div class="subtitle-flex">
+            <p class="subtitle" style="color: rgb(255, 137, 46)">
+              Junior Front-End Devoloper
+            </p>
+            <p class="subtitle">
+              <span class="material-symbols-outlined bob">location_on</span
+              >Snellville, GA
+            </p>
+          </div>
 
-    <div class="section-1 box">
-      <div class="section-wrapper">
-        <p class="title">Hi, I'm Joseph Maddox</p>
-        <div class="subtitle-flex">
-          <p class="subtitle" style="color:rgb(255, 137, 46);">Junior Front-End Devoloper</p>
-          <p class="subtitle">
-            <span class="material-symbols-outlined bob">location_on</span>Snellville, GA
-          </p>
+          <div class="body-flex accent-border">
+            <p class="body">
+              Below, you can learn more about me, check out my projects, and see
+              the tools I use. Have any questions or want to chat about a
+              project? Feel free to drop me a message using the contact form
+              below.
+            </p>
+          </div>
         </div>
 
-        <div class="body-flex">
-          <p class="body">
-            Below, you can learn more about me, check out my projects, and see
-            the tools I use. Have any questions or want to chat about a
-            project? Feel free to drop me a message using the contact form
-            below.
-          </p>
+        <div class="section-image-wrapper">
+          <div id="blob">
+            <!-- <script src="lottie.js"></script> -->
+          </div>
+          <p class="center-text">HOVER FOR TEXT</p>
         </div>
-      </div>
 
-      <div class="section-image-wrapper">
-        <div id="blob">
-          <!-- <script src="lottie.js"></script> -->
-        </div>
-        <p class="center-text">HOVER FOR TEXT</p>
-      </div>
-
-      <!-- <p class="scroll bob">
+        <!-- <p class="scroll bob">
         <span class="material-symbols-outlined">
           keyboard_double_arrow_left </span>scroll
       </p> -->
-    </div>
+      </div>
 
-    <a id="project-link"></a>
+      <div class="section-divider"></div>
 
-    <div class="section-2 box no-tbp">
-      <!-- <div class="light-bar"></div>
+      <a id="project-link"></a>
+
+      <div class="section-2 box no-tbp">
+        <!-- <div class="light-bar"></div>
       <img class="fly" src="https://raw.githubusercontent.com/Lavertsss/Assets/main/Fly.png" /> -->
-      <div class="project-wrapper">
+        <div class="project-wrapper">
+          <div class="project-flex">
+            <h1 class="project-header" style="color: rgb(255, 137, 46)">
+              Project 1
+            </h1>
+            <p class="project-subheader">Personal Notes Page</p>
+            <p class="project-description">
+              My personal current JS notes page<span class="accent-static"
+                >.
+              </span>
+              Could have just wrote it in the code editor but whats the fun in
+              that<span class="accent-static">?</span>
+            </p>
 
-
-        <div class="project-flex">
-          <h1 class="project-header" style="color:rgb(255, 137, 46);">Project 1</h1>
-          <p class="project-subheader">Personal Notes Page</p>
-          <div class="project-frame">
             <div class="frame-format">
-              <div class="frame-img"></div>
-              <p class="frame-caption">Notes</p>
+              <div class="img-wrapper border-left">
+                <img
+                  class="frame-img"
+                  height="auto"
+                  width="90%"
+                  src="https://raw.githubusercontent.com/Lavertsss/Assets/main/jsnotes.png"
+                  alt="Notes Image"
+                />
+              </div>
+              <div class="frame-caption">
+                <a
+                  class="caption-items"
+                  href="https://notesofamindlessmuseum.com/"
+                  >WEBSITE URL</a
+                >
+                <span class="accent-static">|</span>
+                <a class="caption-items" href="google.com">SOURCE CODE</a>
+                <span class="accent-static">|</span>
+                <a class="caption-items">PASSCODE: 144</a>
+              </div>
             </div>
           </div>
 
-          <h1 class="title flex-end" style="color:rgb(255, 137, 46);">Project 2</h1>
-          <div class="project-frame">
+          <div class="project-flex text-right">
+            <h1 class="project-header" style="color: rgb(255, 137, 46)">
+              Project 2
+            </h1>
+            <p class="project-subheader">Mindless Museum</p>
+            <p class="project-description">
+              My previous portfolio page<span class="accent-static">. </span>
+              Can you see the improvement<span class="accent-static">?</span>
+            </p>
+
             <div class="frame-format">
-              <img class="frame-img" href="Practice-Projects\Portfolio\pictures\jsnotes.png"/>
-              <p class="frame-caption">(Placeholder)</p>
+              <div class="img-wrapper img-right border-right">
+                <img
+                  class="frame-img"
+                  height="auto"
+                  width="90%"
+                  src="https://raw.githubusercontent.com/Lavertsss/Assets/main/mindless.png"
+                  alt="Portolio Image"
+                />
+              </div>
+              <div class="frame-caption text-right">
+                <a
+                  class="caption-items"
+                  href="https://notesofamindlessmuseum.com/"
+                  >WEBSITE URL</a
+                >
+                <span class="accent-static">|</span>
+                <a class="caption-items" href="google.com">SOURCE CODE</a>
+                <span class="accent-static">|</span>
+                <a class="caption-items">HOVER EFFECT</a>
+              </div>
             </div>
           </div>
 
-          <h1 class="title flex-end" style="color:rgb(255, 137, 46);">Project 3</h1>
-          <div class="project-frame">
-            <div class="frame-format">
-              <div class="frame-img"></div>
-              <p class="frame-caption">(Placeholder)</p>
-            </div>
-          </div>
+          <div class="section-divider"></div>
         </div>
-
-        <a id="about-link"></a>
       </div>
     </div>
-</body>
-
+  </body>
 </html>
